src/App.css
@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Oswald:wght@700&family=Rubik:wght@800&display=swap");

body {
  background-color: #000022;
  color: white;
  min-width: max-content;
}

#root {
  padding: 0 2rem;
  display: flex;
  flex-direction: column;
  place-items: center;
}

